1. Commented out "UpdateIsNormalizedVariable" and "UpdateIsZeroVariable" methods : (initial) ~0.25 MRays -> ~0.64 MRays 
2. (In vec3) Made methods take const and reference parameters : -> ~0.69 MRays 
3. (In vec3) Changed double to floats : -> ~0.70 MRays 
4. Made other classes use const and reference parameters : -> ~1.25 MRays 
5. Pre-calculate ray distribution : -> ~1.36 MRays 
--
6. Changed material type into enum : -> ~1.36 MRays
--
7. Changed color return type to self refernce from void : -> ~1.41 MRays
8. Missed setting const reference parameter on Object->ScatterRay : -> ~1.44 MRays
--
9. Added const and one reference in Sphere->Intersect. Reused color and Ray vairable in trace loop : -> ~1.48 MRays
--
10. Counted rays properly : -> ~2.52 MRays
11. Improved Skybox function : -> ~2.63 MRays
--
12. Data oriented storage : -> ~2.62 MRays
--
13. Improved Transform function : -> ~2.93 MRays
14. Reduced vec3 creation and slightly improved flow in material : -> ~2.93
--
15. Added pointers to Objects and their Transform in raycast loop : -> ~3.10