@@ -9,7 +9,7 @@
 class vec3
 {
 public:
-    vec3() : x(0), y(0), z(0)
+    vec3() : x(0.0f), y(0.0f), z(0.0f)
     {
     }
 
